sync_scripts/templates/dask/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: ingress-${JHUB_USERNAME}-dask
    namespace: user-${JHUB_USERNAME}
  spec:
    rules:
    - host: ${JHUB_USERNAME}-dask.131.154.96.42.myip.cloud.infn.it
      http:
        paths:
        - backend:
            service:
              name: ${JHUB_USERNAME}-scheduler
              port:
                number: 8787
          path: /
          pathType: Prefix
    - host: ${JHUB_USERNAME}-local-dask.131.154.96.42.myip.cloud.infn.it
      http:
        paths:
        - backend:
            service:
              name: jupyter-${JHUB_USERNAME}
              port:
                number: 8787
          path: /
          pathType: Prefix
# - type svc  
kind: List
